k8s/apps/code-server4/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: code-server4
  labels:
    app: code-server4
spec:
  ports:
    - name: http
      port: 19200
      targetPort: 19200
  selector:
    app: code-server4
  type: ClusterIP
