k8s/apps/code-server4/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: code-server4
spec:
  ingressClassName: "nginx"
  rules:
    - host: "code-4.walnuts.dev"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: code-server4
                port:
                  number: 19200
